assets/css/style.css
/* ... */
#mindful-earth-text {
  text-align: center;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  padding: 10px 10px 3px;
  border-radius: 5px;
  font-size: 58%;
  position: absolute;
  width: 35%;
  top: 3%;
  left: 10%;
  transform: translate(-15%);
  list-style-type: none;
  word-spacing: 1px;
  line-height: 10px;
}

#mindful-earth-text > li:not(last-child) {
margin-bottom: 10px;
}

#mindful-button img {
  position: absolute;
  width: 100px;
  top: 80%;
  left: 13%;
  transform: translate(-15%);
}

.green-text {
  color: #779d30;
}

/* Go Further Page */

/* Go Further Hero Section */

#go-further-main {
  display: flex;
  flex-grow: 1;
  background-image: url('../images/go-further-hero.webp');
  background-size: auto 100%;
  background-position-x: 45%;
  background-attachment: fixed;
}

#go-further-hero {
  height: 700px;
}

#go-further-hero > h1 {
  position: absolute;
  top: 550px;
  left: 26%;
  padding: 15px;
  border-radius: 10px;
  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
  background-color: rgba(0, 0, 0, 0.7);
  color: white;
  text-align: right;
  font-size: 250%;
  font-weight: 750;
  font-style: italic;
  text-transform: uppercase;
  line-height: 40px;
}

#go-further-hero > h2 {
  position: absolute;
  top: 605px;
  left: 22%;
  max-width: 265px;
  padding: 8px 6px;
  border-radius: 10px;
  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
  background-color: #eed4bb;
  color: rgba(0, 0, 0, 0.6);
  text-align: right;
  text-transform: uppercase;
  font-size: 100%;
  font-weight: 750;
  font-style: italic;
}

/*Go Further Form */
#go-further-signup {
  width: 90%;
  padding: 20px;
  border-radius: 0px 10px 10px 0;
  color: white;
  background-color: rgba(0, 0, 0, 0.9);
  text-align: left;
  font-size: 85%;
  margin-bottom: 50px;
  box-shadow: 4px 4px 10px black;
}

#form-heading {
  font-size: 110%;
  margin-bottom: 10px;
}

#go-further-signup select {
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
  width: 200px;
  border-radius: 5px;
}

#name {
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
  border-radius: 10px;
  width: 200px;
  text-align: center;
}

#age {
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
  border-radius: 10px;
  width: 50px;
  text-align: center;
}

#go-further-signup textarea {
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
  border-radius: 5px;
}

#email {
  margin-left: 10px;
  border-radius: 5px;
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
}

#phone-number {
  margin-left: 25px;
  border-radius: 5px;
  background-color: rgba(150, 150, 150, 0.5);
  color: white;
}

#form-button {
  font-family: "anybody", arial, sans-serif;
  font-size: 120%;
  background-color: #eed4bb;
  color: rgba(0, 0, 0, 0.6);
  padding: 10px;
  border-radius: 7px;
  border: none;
  box-shadow: 1px 1px 5px rgba(150, 150, 150, 0.5);
}

#form-button:hover {
  box-shadow: none;
  color: #eed4bb;
  background-color: rgba(100, 100, 100, 0.5);
}

/* Walk-Ins Section */
#walk-ins {
position: relative;
height: 600px;
max-width: 600px;
}

#walk-ins-text {
  position: absolute;
  width: auto;
  top: 20px;
  left: 20%;
  padding: 10px;
  min-height: 227px;
  border-radius: 10px 0 0 0;
  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
  background-color: rgba(0, 0, 0, 0.9);
  color: white;
  text-align: right;
}

#walk-ins-text > h2 {
margin-bottom: 10px;
}

#walk-ins-text > h3 {
  margin-bottom: 10px;
  }

#map {
  position: absolute;
  top: 227px;
  left: 20%;
  height: 250px;
  width: 80%;
  border-radius: 0 0 0 10px;
  box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
  margin: 20px auto 30px;
}

/* Form-Submitted Page */

#form-submitted {
  background-image: url('/assets/images/submitted-hero.webp');
  background-size: cover;
  background-attachment: fixed;
  width: 100%;
  background-position: 50%;
  height: 750px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.form-submitted-headings {
background-color: rgba(0, 0, 0, 0.7);
color: white;
}

#form-submitted > h1 {
  text-transform: uppercase;
  font-size: 250%;
  padding: 20px;
}

#form-submitted > h2 {
  font-size: 100%;
  padding: 0 20px 20px;
}

#form-submitted > h3 {
  font-size: 90%;
  padding: 0 20px 20px;
}

#vid-container {
  margin: 50px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#centr-vid {
  aspect-ratio: 16 / 9;
  width: 90%;
  border-radius: 10px;
}

/* Footer */
footer {
  background-color: black;
}

/* Partners Section */
#partners {
  background-color: black;
  margin: 0;
}

#partners > h2 {
  color: white;
  font-size: 95%;
  text-transform: uppercase;
  text-align: center;
  margin: 30px auto 0;
}

#partners > h3 {
  color: white;
  font-size: 80%;
  text-align: center;
  margin: 0 auto 5px;
  padding-bottom: 15px;
}

#partner-logos {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  margin: 10px 0;
}

#partner-logos img {
  width: 50px;
  height: auto;
  margin: 0 auto;
}

/* Contact Section */
#contact {
  background-color: black;
  color: white;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  font-size: 50%;
}

#mission-statement {
  width: 40%;
  margin-bottom: 15px;
}

#mission-statement > h2 {
  text-transform: uppercase;
  margin-bottom: 2px;
}

#mission-statement > h3 {
  font-style: italic;
  text-transform: uppercase;
  margin-bottom: 7px;
}

.contact-details {
  margin-bottom: px;
  text-align: right;
}

/* Social Networks Section */
#social-networks {
  background-color: rgba(0, 0, 0, 1);
  text-align: center;
  padding: 3px 10px 15px;
  list-style-type: none;
  display: flex;
  justify-content: space-evenly;
  font-size: 90%;
}

#social-networks i {
  font-size: 180%;
  padding: 5%;
  color: white;
}

/* Responsivity - Media Queries */

